fixed animation stuck

--- a/style.css
+++ b/style.css
@@ -31,11 +31,7 @@ strong, b {
   }
 }
 
-@media only screen and (min-width: 0px) and (max-width: 320px) and (orientation: landscape) {
 
-
-
-}
 
 
 @media only screen and (min-width: 0px) and (max-width: 823px) and (orientation: landscape) {
@@ -402,13 +398,13 @@ padding-top: 15px !important;
 
 }
 .textMargin3 {
-  margin-left: 10px !important;
+  padding-left: 5px  !important;
   margin-right: 20px;
   width: 300px;
 }
 
 .textMargin2 {
-  margin-left: 10px !important;
+  padding-left: 5px !important;
   margin-right: 20px;
   width: 300px;
 }
